Closed
Bug 1428693
Opened 8 years ago
Closed 8 years ago
svg animation freezing unless moving mouse
Categories
(Core :: DOM: Animation, defect)
Tracking
()
VERIFIED
FIXED
mozilla60
People
(Reporter: nefiga, Assigned: hiro)
References
Details
(Keywords: regression)
Attachments
(2 files)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.13; rv:57.0) Gecko/20100101 Firefox/57.0
Build ID: 20180103231032
Steps to reproduce:
https://jsfiddle.net/zt3mzfdu/
Actual results:
I am on firefox 57.0.4 on macbook pro OS 10.13.2
I would expect the svg to at least animate badly. It doesn't even animate unless I move my mouse over the viewport iframe. If i move my mouse, it appears to render frames, but when I stop it ceases to animate again.
It appears that the animation functions normally if:
1) I remove the overflow-y: auto rule;
OR, 2) I remove the translate3d rule;
OR, 3) I change the translate3d rule to use pixels instead of percent;
Expected results:
It animates the svg, even poorly.
Slightly simplified jsfiddle:
https://jsfiddle.net/qwru0yae/
![]() |
||
Comment 2•8 years ago
|
||
also produced the issue on win10
status-firefox57:
--- → wontfix
status-firefox58:
--- → fix-optional
status-firefox59:
--- → affected
status-firefox-esr52:
--- → affected
Component: Untriaged → SVG
OS: Unspecified → All
Product: Firefox → Core
![]() |
||
Updated•8 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
![]() |
||
Comment 3•8 years ago
|
||
regressed since version 49.
Keywords: regression
Version: 57 Branch → 49 Branch
![]() |
||
Comment 4•8 years ago
|
||
Regression window:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=5613020111ba45dda63615dfa5a791f7ad1a8e4a&tochange=fe7766352e3eb84c9da204d866e8a25d814a09d8
regressed by Bug 1166500
@:hiro,
Your bunch of patch seems to cause the regression, can you look into this?
![]() |
||
Comment 5•8 years ago
|
||
@:hiro,
Your bunch of patch seems to cause the regression, can you look into this?
Flags: needinfo?(hikezoe)
![]() |
||
Comment 6•8 years ago
|
||
workaround
setting dom.animations.offscreen-throttling = false
Assignee | ||
Updated•8 years ago
|
Component: Layout → DOM: Animation
Assignee | ||
Comment 7•8 years ago
|
||
Didn't bug 1337994 fix this test case?
![]() |
||
Comment 8•8 years ago
|
||
also reproduced on version 55.
so, the bug 1337994 seems to do not fix this.
![]() |
||
Updated•8 years ago
|
status-firefox60:
--- → affected
Assignee | ||
Comment 10•8 years ago
|
||
I found this patch in my patch queue. :)
https://treeherder.mozilla.org/#/jobs?repo=try&revision=85c5e91bf5a9decd349169065ebfea7c3fa55f72
Comment hidden (mozreview-request) |
Comment 12•8 years ago
|
||
mozreview-review |
Comment on attachment 8955957 [details]
Bug 1428693 - Use GetOverflowAreasRelativeToSelf() instead of GetOverflowAreas() for scrollable parent.
https://reviewboard.mozilla.org/r/224900/#review230876
Attachment #8955957 -
Flags: review?(matt.woodrow) → review+
Assignee | ||
Updated•8 years ago
|
Assignee: nobody → hikezoe
Status: NEW → ASSIGNED
Comment 14•8 years ago
|
||
Pushed by hikezoe@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/8ff883d778bf
Use GetOverflowAreasRelativeToSelf() instead of GetOverflowAreas() for scrollable parent. r=mattwoodrow
Comment 15•8 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla60
Comment 16•8 years ago
|
||
Ugh, wish this would have landed a week or so ago so we could have gotten it into 59 still. That said, calling 59 wontfix since this is an old issue we've been shipping for awhile.
Updated•8 years ago
|
QA Whiteboard: [good first verify]
Comment 17•8 years ago
|
||
I have reproduced this bug with Nightly 59.0a1 (2018-01-07) on Windows 10, 64 Bit!
This bug's fix is verified with latest Beta!
Build ID : 20180402175344
User Agent : Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:60.0) Gecko/20100101 Firefox/60.0
QA Whiteboard: [good first verify] → [good first verify] [bugday-20180404]
Assignee | ||
Comment 18•8 years ago
|
||
Thank you Mohammad!
Comment 19•7 years ago
|
||
Reproduced the bug on Nightly 59.0a1 (2018-01-07) under Windows 10 x64.
Bug fix is verified with: Firefox 60.0b15 and latest Nightly 61.0a1(2018-04-25).
Tests were performed under Windows 10x64, MacOS X 10.10.5 and Ubuntu 16.04x64.
Comment 20•4 years ago
|
||
This is happening to me on this site: https://www.smashingmagazine.com/2015/09/creating-cel-animations-with-svg/
I am using Firefox 93.0 64 bit on Macbook Air M1 (2020) running Big Sur (ver 11.6).
SVG animations flash the same frame unless mousing over and moving the mouse.
status-firefox93:
--- → affected
Comment 21•4 years ago
|
||
Hi itsmarkdaling. Thank you for mentioning this.
Are you able to file this as a separate bug? The animation from smashingmagazine also flashes for me while the test case from comment #0 (https://jsfiddle.net/zt3mzfdu/) works correctly so I believe this is a separate bug.
status-firefox93:
affected → ---
You need to log in
before you can comment on or make changes to this bug.
Description
•